# aoc

./: .gitignore  BUILD.bazel  ReadMe.md  WORKSPACE  bazel-aoc  deps.bzl  go.mod  go.sum  prepare.sh
2015/1/: a.sh  b.sh
2015/10/: a.jl
2015/11/: a.jl  puzzle
2015/12/: a.jl  test
2015/2/: a.jl  b.jl  test
2015/3/: a.jl
2015/4/: a.jl
2015/5/: a.jl  b.jl  test  test2
2015/6/: a.jl  b.jl
2015/7/: a.jl  test2
2015/8/: a.jl  test
2015/9/: a.jl
2016/1/: a.jl  b.jl
2017/: pom.xml
2017/aoc/: pom.xml
2017/aoc/src/main/java/com/gavinmanning/: Day10.java  Day12.java  Day13.java  Day14.java  Day15.java  Day16.java  Day17.java  Day18.java  Day18b.java  Day2.java  Day23.java  Day24.java  Day25.java  Day3.java  Day4.java  Day5.java  Day6.java  Day7.java  Day8.java  Day9.java  Utils.java
2017/aoc/src/main/resources/: day23-commented.txt
2017/aoc/src/test/java/com/gavinmanning/: Day10Test.java  Day12Test.java  Day13Test.java  Day15Test.java  Day16Test.java  Day17Test.java  Day18Test.java  Day18bTest.java  Day1Test.java  Day24Test.java  Day25Test.java  Day2Test.java  Day7Test.java  Day8Test.java  Day9Test.java
2018/1/: day1.py
2018/2/: day2.py
2018/3/: day3.py
2018/4/: day4.py
2018/5/: day5.py
2018/6/: day6.py
2018/7/: day7.py
2020/1/: a.js  b.js
2020/10/: a.js  b.js  input.txt
2020/11/: a.js  b.js
2020/12/: a.js  b.js
2020/13/: a.js  b.go  b.js  c.js  testb.txt
2020/14/: a.go  b.go
2020/15/: a.js
2020/16/: a.js  b.js
2020/17/: a.go  b.go
2020/18/: a.js  b.js  test.txt
2020/19/: a.js
2020/2/: a.js  b.js
2020/20/: a.go  b.go
2020/21/: a.js  b.js
2020/22/: a.js  b.js
2020/23/: a.go  a.js
2020/3/: a.js
2020/4/: a.js  x
2020/5/: a.js
2020/6/: a.js  b.js
2020/7/: a.js  b.js
2020/8/: a.js  b.js
2020/9/: a.js  b.js
2020/template/: a.go  a.js
2021/: aoc.py  colors.py  grid.py  grid_test.py  set.py  setup  util.py
2021/1/: a.py  b.py
2021/10/: a.py  b.py
2021/11/: a.py
2021/12/: a.py  b.py
2021/13/: a.py
2021/14/: a.py  b.py
2021/15/: a.py  test2
2021/16/: a.py
2021/17/: a.py
2021/18/: 18_test.py  a.py
2021/19/: a.py  a_test.py
2021/2/: a.py  b.py
2021/20/: a.py  a_test.py
2021/21/: a.py  b.py
2021/22/: a.py  b.py
2021/23/: input
2021/24/: a.py  gen.sh  generated.py  input.py  runit.py  test.py  test2.py
2021/3/: a.py  b.py
2021/4/: a.py  b.py
2021/5/: a.py  b.py
2021/6/: a.py
2021/7/: a.py  b.py
2021/8/: a.py  b.py
2021/9/: a.py  b.py  test
2021/deprecated/: aoc.py  set.py  set_test.py
2022/1/: a.jl  b.jl
2022/10/: a.jl  b.jl
2022/11/: b.jl
2022/12/: a.jl
2022/13/: a.jl  b.jl  puzzleb  test1
2022/14/: a.jl  b.jl
2022/15/: a.jl  b.jl
2022/17/: a.jl  b.jl
2022/18/: a.jl  b.jl
2022/2/: a.jl  b.jl
2022/20/: a.jl  a2.jl
2022/21/: a.jl  b.jl
2022/22/: a.jl  b.jl  test2
2022/23/: a.jl  b.jl
2022/24/: a.jl
2022/25/: a.jl  test2
2022/3/: a.jl  b.jl
2022/4/: a.jl  test
2022/5/: a.jl  b.jl
2022/6/: a.jl  b.jl
2022/7/: a.jl  b.jl
2022/8/: a.jl  b.jl
2022/9/: a.jl  b.jl
2023/: BUILD.bazel  aoc.go
2023/1/: BUILD.bazel  a.go  a_test.go  testA.txt
2023/10/: BUILD.bazel  a.go  a_test.go  foo
2023/11/: BUILD.bazel  a.go  a_test.go
2023/12/: BUILD.bazel  a.go  a_test.go
2023/13/: BUILD.bazel  a.go  a_test.go
2023/14/: BUILD.bazel  a.go  a_test.go
2023/15/: BUILD.bazel  a.go  a_test.go
2023/16/: BUILD.bazel  a.go  a_test.go  lightbeam_grid.go
2023/17/: BUILD.bazel  a.go  a_test.go
2023/18/: BUILD.bazel  a.go  a_test.go
2023/19/: BUILD.bazel  a.go  a_test.go
2023/2/: BUILD.bazel  a.go  a_test.go  b.go
2023/20/: BUILD.bazel  a.go  a_test.go
2023/21/: BUILD.bazel  a.go  a_test.go
2023/22/: BUILD.bazel  a.go  a_test.go
2023/24/: BUILD.bazel  a.go  a_test.go
2023/3/: BUILD.bazel  a.go  a_test.go  b.go  test2.txt
2023/4/: BUILD.bazel  a.go  a_test.go
2023/5/: BUILD.bazel  a.go  a_test.go
2023/6/: BUILD.bazel  a.go  a_test.go
2023/7/: BUILD.bazel  a.go  a_test.go  test2.txt
2023/8/: BUILD.bazel  a.go  a_test.go  b.go
2023/9/: BUILD.bazel  a.go  a_test.go  test2.txt
2023/aoc/: BUILD.bazel  aoc.go  grid.go  rangemap.go
2024/: BUILD.bazel  aoc.go
2024/1/: BUILD.bazel  a.go  a_test.go
2024/10/: BUILD.bazel  a.go  a_test.go
2024/11/: BUILD.bazel  a.go  a_test.go
2024/12/: BUILD.bazel  a.go  a_test.go
2024/13/: BUILD.bazel  a.go  a_test.go
2024/14/: BUILD.bazel  a.go  a_test.go
2024/15/: BUILD.bazel  a.go  a_test.go
2024/16/: BUILD.bazel  a.go  a_test.go
2024/17/: BUILD.bazel  a.go  a_test.go  puzzle.txt
2024/18/: BUILD.bazel  a.go  a_test.go
2024/19/: BUILD.bazel  a.go  a_test.go
2024/2/: BUILD.bazel  a.go  a_test.go
2024/20/: BUILD.bazel  a.go  a_test.go
2024/21/: BUILD.bazel  a.go  a_test.go
2024/22/: BUILD.bazel  a.go  a_test.go
2024/23/: BUILD.bazel  a.go  a_test.go
2024/24/: BUILD.bazel  a.go  a_test.go  check.sh
2024/25/: BUILD.bazel  a.go  a_test.go
2024/3/: BUILD.bazel  a.go  a_test.go  puzzle2.txt
2024/4/: BUILD.bazel  a.go  a_test.go
2024/5/: BUILD.bazel  a.go  a_test.go
2024/6/: BUILD.bazel  a.go  a_test.go
2024/7/: BUILD.bazel  a.go  a_test.go
2024/8/: BUILD.bazel  a.go  a_test.go
2024/9/: BUILD.bazel  a.go  a_test.go
common/aoc/: BUILD.bazel  aoc.go  generic_grid.go  grid.go  terminal.go
templates/: BUILD.bazel  a.go  a.go.template  a_test.go.template  aoc.go.template  template.BUILD.bazel  template.aoc.BUILD.bazel
