load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "2023_lib",
    srcs = ["aoc.go"],
    importpath = "github.com/baldrick/aoc/2023",
    visibility = ["//visibility:private"],
    deps = [
        "//2023/1",
        "//2023/10",
        "//2023/11",
        "//2023/12",
        "//2023/13",
        "//2023/14",
        "//2023/15",
        "//2023/16",
        "//2023/17",
        "//2023/18",
        "//2023/19",
        "//2023/2",
        "//2023/20",
        "//2023/21",
        "//2023/22",
        "//2023/24",
        "//2023/3",
        "//2023/4",
        "//2023/5",
        "//2023/6",
        "//2023/7",
        "//2023/8",
        "//2023/9",
        "@com_github_urfave_cli//:cli",
    ],
)

go_binary(
    name = "2023",
    embed = [":2023_lib"],
    visibility = ["//visibility:public"],
)
