load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "2024_lib",
    srcs = ["aoc.go"],
    importpath = "github.com/baldrick/aoc/2024",
    visibility = ["//visibility:private"],
    deps = [
        "//2024/1",
        "//2024/2",
        "//2024/3",
        "//2024/4",
        "//2024/5",
        "//2024/6",
        "//2024/7",
        "//2024/8",
        "//2024/9",
        "//2024/10",
        "@com_github_urfave_cli//:cli",
    ],
)

go_binary(
    name = "aoc",
    embed = [":2024_lib"],
    visibility = ["//visibility:public"],
)
