load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "{{DAY}}_lib",
    srcs = ["a.go"],
    importpath = "github.com/baldrick/aoc/AdventOfCode/{{YEAR}}/{{DAY}}",
    visibility = ["//visibility:private"],
    deps = ["//AdventOfCode/2023/aoc:aoc"],
    data = glob(["*.txt"])
)

go_binary(
    name = "{{DAY}}",
    embed = [":{{DAY}}_lib"],
    visibility = ["//visibility:public"],
)
