load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "{{DAY}}_lib",
    srcs = ["a.go"],
    data = glob(["*.txt"]),
    importpath = "github.com/baldrick/aoc/AdventOfCode/{{YEAR}}/{{DAY}}",
    visibility = ["//visibility:private"],
    deps = ["//2023/aoc"],
)

go_binary(
    name = "{{DAY}}",
    embed = [":{{DAY}}_lib"],
    visibility = ["//visibility:public"],
)
