load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "{{YEAR}}_lib",
    srcs = ["aoc.go"],
    importpath = "github.com/baldrick/aoc/{{YEAR}}",
    visibility = ["//visibility:private"],
    deps = [{{DEPS}}
        "@com_github_urfave_cli//:cli",
    ],
)

go_binary(
    name = "aoc",
    embed = [":{{YEAR}}_lib"],
    visibility = ["//visibility:public"],
)
