load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "12",
    srcs = ["a.go"],
    embedsrcs = ["puzzle.txt"],
    importpath = "github.com/baldrick/aoc/2023/12",
    visibility = ["//visibility:public"],
    deps = [
        "//2023/aoc",
        "@com_github_urfave_cli//:cli",
    ],
)

go_test(
    name = "12_test",
    srcs = ["a_test.go"],
    embed = [":12"],
    visibility = ["//visibility:public"],
)
