load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "16",
    srcs = ["a.go"],
    embedsrcs = ["puzzle.txt"],
    importpath = "github.com/baldrick/aoc/2023/16",
    visibility = ["//visibility:public"],
    deps = [
        ":lbg",
        "//2023/aoc",
        "//2023/aoc:ggrid",
        "@com_github_urfave_cli//:cli",
    ],
)

go_library(
    name = "lbg",
    srcs = ["lightbeam_grid.go"],
    importpath = "github.com/baldrick/aoc/2023/16/lbgrid",
    visibility = ["//visibility:public"],
)

go_test(
    name = "16_test",
    srcs = ["a_test.go"],
    embed = [":16"],
    visibility = ["//visibility:public"],
)
