load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "19",
    srcs = ["a.go"],
    embedsrcs = ["puzzle.txt"],
    importpath = "github.com/baldrick/aoc/2023/19",
    visibility = ["//visibility:public"],
    deps = [
        "//2023/aoc",
        "@com_github_urfave_cli//:cli",
    ],
)

go_test(
    name = "19_test",
    srcs = ["a_test.go"],
    embed = [":19"],
    visibility = ["//visibility:public"],
)
