load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "2_lib",
    srcs = [
        "a.go",
        "b.go",
    ],
    data = glob(["*.txt"]),
    importpath = "github.com/baldrick/aoc/2023/2",
    visibility = ["//visibility:private"],
    deps = ["//2023/aoc"],
)

go_binary(
    name = "2",
    embed = [":2_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "2b_lib",
    srcs = ["b.go"],
    data = glob(["*.txt"]),
    importpath = "github.com/baldrick/aoc/2023/2",
    visibility = ["//visibility:private"],
    deps = ["//2023/aoc"],
)

go_binary(
    name = "2b",
    embed = [":2b_lib"],
    visibility = ["//visibility:public"],
)
