load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "20",
    srcs = ["a.go"],
    embedsrcs = ["puzzle.txt"],
    importpath = "github.com/baldrick/aoc/2023/20",
    visibility = ["//visibility:public"],
    deps = [
        "//2023/aoc",
        "@com_github_urfave_cli//:cli",
    ],
)

go_test(
    name = "20_test",
    srcs = ["a_test.go"],
    embed = [":20"],
    visibility = ["//visibility:public"],
)
