load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "3_lib",
    srcs = [
        "a.go",
    ],
    data = glob(["*.txt"]),
    importpath = "github.com/baldrick/aoc/2023/3",
    visibility = ["//visibility:private"],
    deps = ["//2023/aoc"]
)

go_binary(
    name = "3",
    embed = [":3_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "3b_lib",
    srcs = ["b.go"],
    data = glob(["*.txt"]),
    importpath = "github.com/baldrick/aoc/2023/3",
    visibility = ["//visibility:private"],
    deps = ["//2023/aoc"],
)

go_binary(
    name = "3b",
    embed = [":3b_lib"],
    visibility = ["//visibility:public"],
)
