load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "3",
    visibility = ["//visibility:public"],
    importpath = "github.com/baldrick/aoc/2023/3",
    srcs = ["a.go"],
    embedsrcs = glob(["*.txt"]),
    deps = [
        "//2023/aoc",
        "@com_github_urfave_cli//:cli",
    ],
)

go_test(
    name = "3_test",
    visibility = ["//visibility:public"],
    srcs = ["a_test.go"],
    embed = [":3"],
)
