load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "4_lib",
    srcs = ["a.go"],
    importpath = "github.com/baldrick/aoc/AdventOfCode/2023/4",
    visibility = ["//visibility:private"],
    deps = ["//AdventOfCode/2023/aoc:aoc"],
    data = glob(["*.txt"])
)

go_binary(
    name = "4",
    embed = [":4_lib"],
    visibility = ["//visibility:public"],
)
