load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "5_lib",
    srcs = ["a.go"],
    data = glob(["*.txt"]),
    importpath = "github.com/baldrick/aoc/2023/5",
    visibility = ["//visibility:private"],
    deps = [
        "//2023/aoc",
        "//2023/aoc:rangemap",
        "@com_github_dustin_go_humanize//:go-humanize",
    ],
)

go_binary(
    name = "5",
    embed = [":5_lib"],
    visibility = ["//visibility:public"],
)
