load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "5",
    srcs = ["a.go"],
    embedsrcs = ["puzzle.txt"],
    importpath = "github.com/baldrick/aoc/2023/5",
    visibility = ["//visibility:public"],
    deps = [
        "//2023/aoc",
        "//2023/aoc:rangemap",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@com_github_urfave_cli//:cli",
    ],
)

go_test(
    name = "5_test",
    srcs = ["a_test.go"],
    embed = [":5"],
    visibility = ["//visibility:public"],
)
