load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "6_lib",
    srcs = ["a.go"],
    data = glob(["*.txt"]),
    importpath = "github.com/baldrick/aoc/2023/6",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "6",
    embed = [":6_lib"],
    visibility = ["//visibility:public"],
)
