load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "7_lib",
    srcs = ["a.go"],
    data = glob(["*.txt"]),
    importpath = "github.com/baldrick/aoc/2023/7",
    visibility = ["//visibility:private"],
    deps = [
        "//2023/aoc",
    ],
)

go_binary(
    name = "7",
    embed = [":7_lib"],
    visibility = ["//visibility:public"],
)
