load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "8_lib",
    srcs = [
        "a.go",
        "b.go",
    ],
    data = glob(["*.txt"]),
    importpath = "github.com/baldrick/aoc/2023/8",
    visibility = ["//visibility:private"],
    deps = ["//2023/aoc"],
)

go_library(
    name = "8b_lib",
    srcs = ["b.go"],
    data = glob(["*.txt"]),
    importpath = "github.com/baldrick/aoc/2023/8",
    visibility = ["//visibility:private"],
    deps = ["//2023/aoc"],
)

go_binary(
    name = "8",
    embed = [":8_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "8b",
    embed = [":8b_lib"],
    visibility = ["//visibility:public"],
)
