load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "9_lib",
    srcs = ["a.go"],
    data = glob(["*.txt"]),
    importpath = "github.com/baldrick/aoc/2023/9",
    visibility = ["//visibility:public"],
    deps = [
        "//2023/aoc",
        "@com_github_urfave_cli//:cli",
    ],
)
