load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "11",
    srcs = ["a.go"],
    embedsrcs = ["puzzle.txt"],
    importpath = "github.com/baldrick/aoc/2024/11",
    visibility = ["//visibility:public"],
    deps = [
        "//common/aoc",
        "@com_github_urfave_cli//:cli",
    ],
)

go_test(
    name = "11_test",
    srcs = ["a_test.go"],
    embed = [":11"],
    visibility = ["//visibility:public"],
)
