load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "14",
    srcs = ["a.go"],
    embedsrcs = ["puzzle.txt"],
    importpath = "github.com/baldrick/aoc/2024/14",
    visibility = ["//visibility:public"],
    deps = [
        "//common/aoc",
        "//common/aoc:grid",
        "@com_github_urfave_cli//:cli",
    ],
)

go_test(
    name = "14_test",
    srcs = ["a_test.go"],
    embed = [":14"],
    visibility = ["//visibility:public"],
)
